@@ -105,6 +105,11 @@ yle-dl https://areena.yle.fi/tv/suorat/yle-tv2
 yle-dl https://areena.yle.fi/tv/suorat/yle-teema-fem
 
 
+Tallenna tunti (eli 3600 sekuntia) sitten TV1:llä näytettyä lähetystä:
+
+yle-dl --startposition -3600 https://areena.yle.fi/tv/suorat/yle-tv1
+
+
 libav:n käyttö ffmpegin sijaan
 ------------------------------
 
